# Final-Year-Project

./: .gitignore  README.md  requirements.txt
Previous FYP code/: test_camera.py
Previous FYP code/helloworld/: CMakeLists.txt
Previous FYP code/sending_files/: test.txt
Previous FYP code/video_recording/: video_record.py
Resp/: KPCA_EDR.m  RSA_resp.m  edr1.m  edr_extraction.m  example.asv  example.m  test_data.mat
Resp/data/: data1.EDF  test6.EDF
Resp/otherfunctions/: import_ctx_data.m
Seatbelt Unit/: ecg_adjust.asv  ecg_adjust.m  main.asv  main.m
Seatbelt Unit/Outer Shell/: box.STL
Seatbelt Unit/Signal Processing (old)/: pca_analysis.m  read_acc_data.m
Seatbelt Unit/edrfunctions/: findpeaks1.m  preimage_rbf.m
Seatbelt Unit/functions/: calib_rotation.m  overall_nmf.m  test_rotation.m
TBVisualise/: test_open.py
TBVisualise/Data/: Acc.txt  Brake.txt  Time.txt  (+1 more)
acc/: adaptive_filtering.asv  adaptive_filtering.m  arduino_interface.m  pca_analysis.asv  raw_processing.m  test_rotation.m  testsim2.csv
blinking-rate-detection/: README.md  blinking.py  data.txt  drawing.py  face_mesh.py  record.py  test.py  utils.py
face mesh detection/: face_mesh.py  record.py
fyp2022/HR_SPARKFUN/: CMakeLists.txt
fyp2022/HR_SPARKFUN/include/: Header.h
fyp2022/HR_SPARKFUN/src/: MAX30105.cpp  main.cpp  ppg.cpp
seatbelt-unit/: README.md  ecg_adjust.m  ecg_idx.m  main.asv  main.m  pca_analysis.m  plotting.m
server_connection/: server.py  test_launch.py
steering-visualisation/: plotting.py  steer_output.csv  visualise.py
sync/: start_test.py  test.py
(+81 files in other folders)
